--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql+ssh://forge@3.238.82.170/forge@127.0.0.1/forge?name=fathomless-moss&usePrivateKey=true
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=movie_list_api
 DB_USERNAME=root
-DB_PASSWORD=S6ZcKCr93Mjo9crpHMwS
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
